# Gerenciador-tarefas

./: README.md
gnc_todo/: .env  Dockerfile  alembic.ini  compose.yaml  pyproject.toml
gnc_todo/gnc_todo/: database.py  main.py  models.py  security.py  settings.py
gnc_todo/gnc_todo/apps/: auth.py  todo.py  users.py
gnc_todo/gnc_todo/schemas/: schema_user.py  schemas_auth.py  schemas_todo.py
gnc_todo/migrations/: env.py
gnc_todo/tests/: conftest.py  factories.py  test_Auth.py  test_Todo.py  test_Users.py  test_db.py  test_security.py
